# FogPiercer

./: .env.example  .gitignore  README.md
logit_hierarchical_regression/: README.md  pyproject.toml  requirements.txt
logit_hierarchical_regression/configs/: train_config.yaml
logit_hierarchical_regression/src/fogpiercer_lhr/: __init__.py  config.py  features.py  hf_io.py  inference.py  prepare_cdb90.py  train.py
simulation/: README.md
simulation/backend/: requirements.txt
simulation/backend/app/: __init__.py  candidate_actions.py  main.py  sensor_mapping.py
simulation/frontend/: app.js  index.html  package.json  styles.css
